Made mobile responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="mediaquries.css" />
     </head>
     <body>
-        <nav id="dextop-nav">
+        <nav id="desktop-nav">
             <div class="logo">AKA</div>
             <div>
                 <ul class="nav-links">
