Completion of Nav

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 </ul>
             </div>
         </nav>
-        <nav id="second-nav">
+        <nav id="hamburger-nav">
             <div class="logo">AKA</div>
-            <div class="second-menu">
-                <div class="second-icon" onclick="toggleMenu()">
-                    <sapn> </sapn>
+            <div class="hamburger-menu">
+                <div class="hamburger-icon" onclick="toggleMenu()">
+                    <span></span>
                     <span></span>
                     <span></span>
                 </div>
